--- a/reports/html/index.html
+++ b/reports/html/index.html
@@ -18,7 +18,7 @@
 <div id="header">
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">98%</span>
+            <span class="pc_cov">9%</span>
         </h1>
         <img id="keyboard_icon" src="keybd_closed.png" alt="Show keyboard shortcuts" />
         <form id="filter_container">
@@ -53,33 +53,40 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>97</td>
-                <td>2</td>
+                <td>176</td>
+                <td>160</td>
                 <td>0</td>
-                <td class="right" data-ratio="95 97">98%</td>
+                <td class="right" data-ratio="16 176">9%</td>
             </tr>
         </tfoot>
         <tbody>
             <tr class="file">
                 <td class="name left"><a href="challenge___init___py.html">challenge/__init__.py</a></td>
                 <td>2</td>
+                <td>1</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="2 2">100%</td>
+                <td class="right" data-ratio="1 2">50%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="challenge_api_py.html">challenge/api.py</a></td>
-                <td>8</td>
-                <td>2</td>
+                <td>49</td>
+                <td>34</td>
                 <td>0</td>
-                <td class="right" data-ratio="6 8">75%</td>
+                <td class="right" data-ratio="15 49">31%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="challenge_mini-pruebas_py.html">challenge/mini-pruebas.py</a></td>
+                <td>22</td>
+                <td>22</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 22">0%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="challenge_model_py.html">challenge/model.py</a></td>
-                <td>87</td>
+                <td>103</td>
+                <td>103</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="87 87">100%</td>
+                <td class="right" data-ratio="0 103">0%</td>
             </tr>
         </tbody>
     </table>
@@ -91,7 +98,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io">coverage.py v5.5</a>,
-            created at 2023-09-25 02:19 -0300
+            created at 2023-09-25 21:13 -0300
         </p>
     </div>
 </div>
